syntax = "proto3";

option csharp_namespace = "GrpcService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetPwTalks(GetPwTalksRequest) returns (stream GetPwTalksResponse);

}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message GetPwTalksRequest {
  int32 day = 1;
}

message GetPwTalksResponse {
  string talk = 1;
}